--- a/src/assets/scss/_tui-date-picker.scss
+++ b/src/assets/scss/_tui-date-picker.scss
@@ -239,7 +239,7 @@
  }
  
  .tui-calendar .tui-calendar-today {
-     color: #4b96e6
+     color: $primary
  }
  
  .tui-calendar .tui-calendar-prev-month, .tui-calendar .tui-calendar-next-month {
@@ -251,7 +251,7 @@
  }
  
  .tui-calendar .tui-calendar-btn-choice {
-     background-color: #4b96e6
+     background-color: $primary
  }
  
  .tui-calendar .tui-calendar-btn-close {
