--- a/src/include/_popup_map_data.html
+++ b/src/include/_popup_map_data.html
@@ -62,12 +62,12 @@
                             <span class="btn_field_formbox_text">검색</span>
                         </a>
                     </div>
-                    <div class="search_field_cols">
+                    <!-- <div class="search_field_cols">
                         <a href="#" class="btn_field_formbox primary">
                             <i class="ico_field_formbox ico_write"></i>
                             <span class="btn_field_formbox_text">등록</span>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- // search -->
@@ -91,7 +91,7 @@
                         <li><a href="#" class="btn_onlytext">전체해제</a></li>
                         <li>
                             <a href="#" class="btn_field_formbox small">
-                                <span class="btn_field_formbox_text">병합</span>
+                                <span class="btn_field_formbox_text">매핑</span>
                             </a>
                         </li>
                     </ul>
