--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -9,7 +9,7 @@ html:not(.touchmode) {
 .front_body{
   min-width:1440px;
     &.center_form_body{
-        background:#f5f5f5 url("../images/background@2x.jpg") no-repeat 0 0/100% auto;
+        background:#f5f5f5 url("../images/background@2x.png") no-repeat 0 0/100% auto;
         .page_wrap{
             min-height:100vh; position:relative; height:auto;
             // background:url("../images/login_object2@2x.png") no-repeat 100% 100%/244px auto;;
