--- a/src/assets/scss/_tree.scss
+++ b/src/assets/scss/_tree.scss
@@ -234,6 +234,7 @@ input.input_tree{color:#5f637a;font-size:13px;padding: 5px 27px 5px 10px;
     background-color: #fff;
     cursor: pointer;
     height: 30px;
+    &.type2{height:32px;}
 }
 .comboTreeWrapper{
 
