--- a/src/include/_popup_map_data.html
+++ b/src/include/_popup_map_data.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="list_table_row">
-                    <table class="list_table">
+                    <table class="list_table else_case"><!-- 20230831 추가 -->
                         <colgroup>
                             <col style="width:16px;" />
                             <col style="width:20%" />
