3차 수정사항 진행중2

--- a/src/assets/scss/_contents.scss
+++ b/src/assets/scss/_contents.scss
@@ -817,8 +817,8 @@ input.field_search_input{}
 }
 
 .list_combosort_wrap{
-    margin:19px 0 12px;
-    .combo_item{}
+    margin:19px 0 12px;position:relative;height:32px;
+    .comboTreeWrapper{position:absolute;top:0;left:0;width:100%;}
 }
 
 
